--- a/springInitializerCustumization/pom.xml
+++ b/springInitializerCustumization/pom.xml
@@ -35,6 +35,19 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		
+		
+<!-- 		https://stackoverflow.com/questions/29782915/spring-boot-jsp-404 -->
+		   <dependency>
+        <groupId>org.apache.tomcat.embed</groupId>
+        <artifactId>tomcat-embed-jasper</artifactId>
+        <scope>provided</scope>
+    </dependency>
+    <dependency>
+        <groupId>javax.servlet</groupId>
+        <artifactId>jstl</artifactId>
+    </dependency>
+    
 	</dependencies>
 
 	<build>
